AbstractDetailedView defined. Misc style fixes and comments added. Integration API packages re-arranged to improve organization.